[package]
name = "mesura"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A metrics gathering library, Prometheus compatible"
readme = "README.md"
homepage = "https://github.com/lebedec/mesura"
repository = "https://github.com/lebedec/mesura"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
